Do preparation activities in the script
which can be invoked locally too. This simplifies testing in the local environments.

See https://gitlab.com/cinc-project/auditor/merge_requests/20#note_220235455 for reference

Signed-off-by: Artem Sidorenko <artem.sidorenko@t-systems.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,7 @@ client_patch:
   tags:
     - osuosl
   script:
-    - echo "Cloning from $ORIGIN"
-    - git clone --depth=1 -b $REF $ORIGIN
-    - cp -R cinc/* chef/
-    - mkdir -p ${CI_PROJECT_DIR}/{cache,cache/git_cache}
-    - echo "cache_dir '${CI_PROJECT_DIR}/cache'" >> chef/omnibus/omnibus.rb
-    - echo "git_cache_dir '${CI_PROJECT_DIR}/cache/git_cache'" >> chef/omnibus/omnibus.rb
-    - sed -i -e 's/^use_git_caching false/use_git_caching true/g' chef/omnibus/omnibus.rb
+    - bash prepare.sh
   artifacts:
     expire_in: 1d
     paths:
