--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -256,6 +256,7 @@ client-test:debian-8:
     - client-package:debian-8
   before_script:
     - dpkg -i data/debian/8/cinc*.deb
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
   after_script:
     - apt-get -y remove cinc
 
@@ -266,6 +267,7 @@ client-test:debian-9:
     - client-package:debian-9
   before_script:
     - dpkg -i data/debian/9/cinc*.deb
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
   after_script:
     - apt-get -y remove cinc
 
@@ -276,6 +278,7 @@ client-test:debian-10:
     - client-package:debian-10
   before_script:
     - dpkg -i data/debian/10/cinc*.deb
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
   after_script:
     - apt-get -y remove cinc
 
@@ -286,6 +289,7 @@ client-test:ubuntu-16.04:
     - client-package:ubuntu-16.04
   before_script:
     - dpkg -i data/ubuntu/16.04/cinc*.deb
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
   after_script:
     - apt-get -y remove cinc
 
@@ -296,6 +300,7 @@ client-test:ubuntu-18.04:
     - client-package:ubuntu-18.04
   before_script:
     - dpkg -i data/ubuntu/18.04/cinc*.deb
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
   after_script:
     - apt-get -y remove cinc
 
@@ -306,6 +311,7 @@ client-test:centos-6:
     - client-package:centos-6
   before_script:
     - yum -y install data/el/6/cinc*.rpm
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
   after_script:
     - yum -y remove cinc
 
@@ -316,9 +322,9 @@ client-test:centos-7:
     - client-package:centos-7
   before_script:
     - yum -y install data/el/7/cinc*.rpm
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
   after_script:
     - yum -y remove cinc
-
 
 client-test:centos-8:
   extends: .client-test
@@ -327,6 +333,7 @@ client-test:centos-8:
     - client-package:centos-8
   before_script:
     - yum -y install data/el/8/cinc*.rpm
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
 
 client-test:opensuse-15:
   extends: .client-test
@@ -335,6 +342,7 @@ client-test:opensuse-15:
     - client-package:opensuse-15
   before_script:
     - rpm -iU data/sles/15/cinc*.rpm
+    - curl -L https://omnitruck.cinc.sh/install.sh | bash -s -- -P cinc-auditor
 
 .ssh-setup:
   before_script:
